# rustodoo

./: .gitignore  Cargo.toml  README.md  flake.nix
migrations/: 20250301130538_create_todo_table.sql  20250301141157_create_todo_table.sql
src/: cli.rs  db.rs  lib.rs  main.rs  model.rs  repository.rs  service.rs  todo.rs  utils.rs
