[package]
name = "rustodoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
tokio = { version = "1.43.0", features = ["rt", "macros"] }

[[bin]]
name = "rt"
path = "src/main.rs"
